# g4new

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: index.md
docs/superpowers/specs/: 2026-06-29-boilerplate-design.md
g4new/: __init__.py  cli.py
search/: search_index.json
tests/: test_cli.py
