[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "g4new"
dynamic = ["version"]
description = "Easiest way to get a fully working Geant4 project ready to run"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Matteo Brini", email = "brinimatteo@gmail.com" }]
keywords = ["geant4", "cmake", "scaffolding", "particle-physics", "simulation"]
dependencies = ["click>=8.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.scripts]
g4new = "g4new.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.0",
    "ruff>=0.5",
    "pyright>=1.1",
    "mkdocs-material>=9.0",
    "build>=1.0",
]

[project.urls]
Homepage = "https://github.com/brinus/g4new"
Repository = "https://github.com/brinus/g4new"
Issues = "https://github.com/brinus/g4new/issues"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["g4new*"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
